2005-10-08 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-paint-server.c: stopped strangely transformed gradients from getting flipped.

2005-10-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Hopefully get rid of "static" when rendering using the cairo backend
	
2005-10-07 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: made opacity work
	* test-display.c: changed set_default_dpi_x_y to set_default_dpi
	* rsvg-cairo-draw.c: put image in the right spot
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
	* configure.in: Ditto
	* rsvg-structure.c: Related to bug #318025, don't set has_width or has_height unless they are > 0.
	* rsvg.c: Bug #168567, mega hack to make multiImage sort-of work.
	
2005-10-04 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* most-cairo-related-places: added lots of stuff to do with gradients, objectBoundBox positioning and spreading. Made currentColor work with cairo. Made courners look great in cairo but crap in libart... I just can't win.

2005-10-04  Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-shapes.c: Fix problems in non-C locales. Bug #317615
	
2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c, rsvg-art-paint-server.c: Fix bug #317871

2005-10-03 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: made a new function called rsvg_state_reconstruct that can make a style inherit from a node's ancestors rather than the drawing context.
	* rsvg-paint-server.c: Made stop colour inheritance and currentColor usage work.
	* rsvg-art-paint-server.c, rsvg-cairo-draw.c: removed redundant code in colour inheritance.
	* rsvg-marker.c: use the new reconstruction function

2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug 314593, support firefox-config
	
2005-09-29  Dom Lachowicz <cinamod@hotmail.com>
